# Flight-Simulator-Problem-Solver

./: AStar.h  AbstractSearcher.cpp  AbstractSearcher.h  BestFirstSearch.cpp  BestFirstSearch.h  BreadthFirstSearch.cpp  BreadthFirstSearch.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.h  DFS.cpp  DFS.h  DepthFirstSearch .cpp  DepthFirstSearch .h  FileCachManager.cpp  FileCachManager.h  FileCacheManager.cpp  FileCacheManager.h  HillClimbing.cpp  HillClimbing.h  MatrixClientHandler.cpp  MatrixClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MySolver.cpp  MySolver.h  MyTestClientHandler.cpp  MyTestClientHandler.h  README.md  SearchProblemSolver.cpp  SearchProblemSolver.h  Searchable.cpp  Searchable.h  SearchableMatrix.cpp  SearchableMatrix.h  Searcher.cpp  Searcher.h  (+8 more)
